feat: journal apis expansion and refinement/corrections